--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Apartments</a></li>
+                    <li><a href="apart.html" target="self">Apartments</a></li>
                     <li><a href="#">Contacts</a></li>
                 </ul>
             </div>
@@ -21,7 +21,7 @@
         <div class="text_box">
             <h1>Future of work market</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus eum beatae error  tenetur cum commodi nihil autem laborum sit,<br> rem iure ipsa quos. Quasi, illo? Incidunt officiis <br> culpa eos nobis!</p>
-            <a href="#" class="book_btn">join now</a>
+            <a href="#" class="book_btn">learn more</a>
         </div>
      </section>
      <!-------------------- years----------- -->
@@ -32,6 +32,7 @@
         <div class="row">
             <div class="year-col">
                 <h3>First two years</h3>
+                <img src="" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis laudantium, id dolor exercitationem, vitae ex quam aut unde temporibus distinctio saepe autem deserunt repudiandae sed suscipit sequi nisi, amet facilis!</p>
                  <!-- -------learn more ----------->
                  <a href="#" class="learn_btn">learn more</a>
@@ -69,6 +70,8 @@
             </div>
         </div>
      </section>
+ 
+
 </body>
 </html>
 
